# src/controllers/personnel.controller.js
@@ -10,6 +10,19 @@ const Token = require("../models/token.model");
 const passwordEncrypt = require("../helpers/passwordEncrypt");
 module.exports = {
   list: async (req, res) => {
+        /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "List Personnels"
+            #swagger.description = `
+                You can send query with endpoint for search[], sort[], page and limit.
+                <ul> Examples:
+                    <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                    <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                    <li>URL/?<b>page=2&limit=1</b></li>
+                </ul>
+            `
+        */
     console.log("object");
     const result = await res.getModelList(Personnel);
     res.status(200).send({
@@ -19,6 +32,17 @@ module.exports = {
     });
   },
   create: async (req, res) => {
+        /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Create Personnel"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    $ref: '#/definitions/Personnel'
+                }
+            }
+        */
     const user = await Personnel.create(req.body);
 
     //TOKEN
@@ -41,6 +65,10 @@ module.exports = {
     });
   },
   read: async (req, res) => {
+        /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Get Single Personnel"
+        */
     if (!mongoose.Types.ObjectId.isValid(req.params.id)) {
       res.status(400).send({
         error: true,
@@ -58,6 +86,17 @@ module.exports = {
     });
   },
   update: async (req, res) => {
+        /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Update Personnel"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    $ref: '#/definitions/Personnel'
+                }
+            }
+        */
     const result = await Personnel.findByIdAndUpdate(req.params.id, req.body, {
       new: true,
       runValidators: true,
@@ -72,6 +111,10 @@ module.exports = {
     });
   },
   dlt: async (req, res) => {
+        /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Delete Personnel"
+        */
     const result = await Personnel.deleteOne({ _id: req.params.id });
     if (result.deletedCount) {
       res.sendStatus(204);
