# src/routes/auth.router.js
@@ -9,7 +9,7 @@ const {login,logout} = require('../controllers/auth.controller')
 // URL :/auth
 
 router.post('/login',login)
-router.all('/logout',logout)
+router.get('/logout',logout)
 
 /* ------------------------------------------------------- */
 module.exports = router
